--- a/.github/workflows/test-windows.yml
+++ b/.github/workflows/test-windows.yml
@@ -106,7 +106,7 @@ jobs:
             -NullRHI
 
       - name: Save DDC to cache
-        if: success() && steps.cache-ddc.outputs.cache-hit != 'true'
+        if: ${{ success() && steps.cache-ddc.outputs.cache-hit != 'true' }}
         uses: actions/cache/save@v4
         with:
           path: checkout/sample/DerivedDataCache
