--- a/.github/workflows/test-android.yml
+++ b/.github/workflows/test-android.yml
@@ -89,7 +89,8 @@ jobs:
             mkdir -p /home/ue4/UnrealEngine/Epic/UnrealEngine && chown -R $uid /home/ue4/UnrealEngine/Epic ;
             mkdir -p /home/ue4/UnrealEngine/Engine/Source/Epic/UnrealEngine && chown -R $uid /home/ue4/UnrealEngine/Engine/Source/Epic ;
             mkdir -p /home/ue4/UnrealEngine/Engine/Intermediate/Build/BuildCookRun && chown -R $uid /home/ue4/UnrealEngine/Engine/Intermediate/Build/BuildCookRun ;
-            mkdir -p /home/ue4/.config/Epic/UnrealEngine && chown -R $uid /home/ue4/.config "
+            mkdir -p /home/ue4/.config/Epic/UnrealEngine && chown -R $uid /home/ue4/.config ;
+            chown -R $uid /home/ue4/android-sdk "
 
       - name: Download package
         uses: actions/download-artifact@v4
@@ -133,6 +134,7 @@ jobs:
             -e SENTRY_AUTH_TOKEN="$SENTRY_AUTH_TOKEN" \
             -e SENTRY_ORG="$SENTRY_ORG" \
             -e SENTRY_PROJECT="$SENTRY_PROJECT" \
+            -e TMPDIR="/workspace/checkout/sample/Intermediate/Android/tmp" \
             unreal /home/ue4/UnrealEngine/Engine/Build/BatchFiles/RunUAT.sh BuildCookRun \
             -project=/workspace/checkout/sample/SentryPlayground.uproject \
             -archivedirectory=/workspace/checkout/sample/Builds \
