--- a/.github/workflows/test-android.yml
+++ b/.github/workflows/test-android.yml
@@ -90,7 +90,8 @@ jobs:
             mkdir -p /home/ue4/UnrealEngine/Engine/Source/Epic/UnrealEngine && chown -R $uid /home/ue4/UnrealEngine/Engine/Source/Epic ;
             mkdir -p /home/ue4/UnrealEngine/Engine/Intermediate/Build/BuildCookRun && chown -R $uid /home/ue4/UnrealEngine/Engine/Intermediate/Build/BuildCookRun ;
             mkdir -p /home/ue4/.config/Epic/UnrealEngine && chown -R $uid /home/ue4/.config ;
-            chown -R $uid /home/ue4/android-sdk "
+            chown -R $uid /home/ue4/android-sdk ;
+            chmod 777 /tmp "
 
       - name: Download package
         uses: actions/download-artifact@v4
