--- a/.github/workflows/test-android.yml
+++ b/.github/workflows/test-android.yml
@@ -82,6 +82,7 @@ jobs:
           ENGINE_PATH: ${{ inputs.unreal-version == '4.27' && 'Programs/UnrealPak/Saved' || 'Binaries/ThirdParty/DotNet' }}
         run: |
           uid=$(id -u) # the GH action user ID
+          user='gh'
           docker exec --user root unreal bash -c "
             chown -R $uid /home/ue4/UnrealEngine/Engine/Binaries/ThirdParty/Mono/Linux ;
             chown -R $uid /home/ue4/UnrealEngine/Engine/\"$ENGINE_PATH\" ;
@@ -91,6 +92,7 @@ jobs:
             mkdir -p /home/ue4/UnrealEngine/Engine/Intermediate/Build/BuildCookRun && chown -R $uid /home/ue4/UnrealEngine/Engine/Intermediate/Build/BuildCookRun ;
             mkdir -p /home/ue4/.config/Epic/UnrealEngine && chown -R $uid /home/ue4/.config ;
             chown -R $uid /home/ue4/android-sdk ;
+            chown -R $uid /home/$user ;
             chmod 777 /tmp "
 
       - name: Download package
