--- a/.github/workflows/test-android.yml
+++ b/.github/workflows/test-android.yml
@@ -11,7 +11,7 @@ env:
 jobs:
   test:
     name: Test
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest-4-cores
 
     steps:
       - name: Free disk space
