--- a/.github/workflows/test-linux.yml
+++ b/.github/workflows/test-linux.yml
@@ -105,6 +105,27 @@ jobs:
           UNREAL_VERSION: ${{ inputs.unreal-version }}
         run: unzip sentry-unreal-*-engine"$UNREAL_VERSION".zip -d checkout/sample/Plugins/sentry
 
+      - name: Compute DDC cache key
+        id: ddc-cache-key
+        run: |
+          HASH="${{ hashFiles('checkout/sample/Content/**', 'checkout/sample/Config/**/*.ini', 'checkout/sample/*.uproject') }}"
+          KEY="ue-${{ inputs.unreal-version }}-linux-ddc-${HASH}"
+          echo "key=${KEY}" >> $GITHUB_OUTPUT
+          echo "DDC cache key: ${KEY}"
+
+      - name: Configure project-local DDC
+        shell: pwsh
+        run: ./checkout/scripts/configure-local-ddc.ps1 -ProjectPath checkout/sample
+
+      - name: Restore cached DDC
+        id: cache-ddc
+        uses: actions/cache/restore@v4
+        with:
+          path: checkout/sample/DerivedDataCache
+          key: ${{ steps.ddc-cache-key.outputs.key }}
+          restore-keys: |
+            ue-${{ inputs.unreal-version }}-linux-ddc
+
       - name: Set permissions for sample
         # sentry-native requires write access to sample project directory in order to initialize itself properly
         run: docker exec -w /workspace/checkout unreal chmod -R +x sample
@@ -117,7 +138,7 @@ jobs:
         run: |
           docker exec unreal bash -c "
             mkdir -p ~/.config/Unreal\ Engine/UnrealBuildTool ;
-            cp /workspace/checkout/.github/BuildConfiguration.xml ~/.config/Unreal\ Engine/UnrealBuildTool/ "            
+            cp /workspace/checkout/.github/BuildConfiguration.xml ~/.config/Unreal\ Engine/UnrealBuildTool/ "
 
       - name: Run tests
         id: run-tests
@@ -139,6 +160,7 @@ jobs:
             -platform=Linux \
             -nop4 \
             -cook \
+            -iterate \
             -build \
             -stage \
             -prereqss \
@@ -153,6 +175,13 @@ jobs:
             -NoPause \
             -NoSplash \
             -NullRHI          
+
+      - name: Save DDC to cache
+        if: ${{ success() && steps.cache-ddc.outputs.cache-hit != 'true' }}
+        uses: actions/cache/save@v4
+        with:
+          path: checkout/sample/DerivedDataCache
+          key: ${{ steps.ddc-cache-key.outputs.key }}
 
       - name: Collect sample test info
         if: ${{ always() && steps.run-tests.outcome == 'failure' }}
