--- a/.github/workflows/test-android.yml
+++ b/.github/workflows/test-android.yml
@@ -114,6 +114,27 @@ jobs:
           UNREAL_VERSION: ${{ inputs.unreal-version }}
         run: unzip sentry-unreal-*-engine"$UNREAL_VERSION".zip -d checkout/sample/Plugins/sentry
 
+      - name: Compute DDC cache key
+        id: ddc-cache-key
+        run: |
+          HASH="${{ hashFiles('checkout/sample/Content/**', 'checkout/sample/Config/**/*.ini', 'checkout/sample/*.uproject') }}"
+          KEY="ue-${{ inputs.unreal-version }}-android-ddc-${HASH}"
+          echo "key=${KEY}" >> $GITHUB_OUTPUT
+          echo "DDC cache key: ${KEY}"
+
+      - name: Configure project-local DDC
+        shell: pwsh
+        run: ./checkout/scripts/configure-local-ddc.ps1 -ProjectPath checkout/sample
+
+      - name: Restore cached DDC
+        id: cache-ddc
+        uses: actions/cache/restore@v4
+        with:
+          path: checkout/sample/DerivedDataCache
+          key: ${{ steps.ddc-cache-key.outputs.key }}
+          restore-keys: |
+            ue-${{ inputs.unreal-version }}-android-ddc
+
       - name: Set permissions for sample
         # sentry-native requires write access to sample project directory in order to initialize itself properly
         run: docker exec -w /workspace/checkout unreal chmod -R +x sample
@@ -149,11 +170,19 @@ jobs:
             -clientconfig=Development \
             -nop4 \
             -cook \
+            -iterate \
             -build \
             -stage \
             -prereqs \
             -package \
             -archive
+
+      - name: Save DDC to cache
+        if: ${{ success() && steps.cache-ddc.outputs.cache-hit != 'true' }}
+        uses: actions/cache/save@v4
+        with:
+          path: checkout/sample/DerivedDataCache
+          key: ${{ steps.ddc-cache-key.outputs.key }}
 
       - name: Collect build logs on failure
         if: ${{ always() && steps.build-android.outcome == 'failure' }}
