Inherit secrets in Android CI workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -165,6 +165,7 @@ jobs:
   test-android:
     needs: [package-preparation]
     name: Android UE ${{ matrix.unreal }}
+    secrets: inherit
     strategy:
       fail-fast: false
       matrix:
