--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -162,6 +162,18 @@ jobs:
     with:
       unreal-version: ${{ matrix.unreal }}
 
+  test-android:
+    needs: [package-preparation]
+    name: Android UE ${{ matrix.unreal }}
+    secrets: inherit
+    strategy:
+      fail-fast: false
+      matrix:
+        unreal: ['4.27', '5.1', '5.2', '5.3', '5.4', '5.5', '5.6']
+    uses: ./.github/workflows/test-android.yml
+    with:
+      unreal-version: ${{ matrix.unreal }}
+
   integration-test-linux:
     needs: [test-linux]
     name: Linux UE ${{ matrix.unreal }}
