Update sample app to receive input args on Android (required for testing)

--- a/sample/Config/DefaultEngine.ini
+++ b/sample/Config/DefaultEngine.ini
@@ -215,6 +215,8 @@ KeyStore=debug.keystore
 KeyAlias=androiddebugkey
 KeyStorePassword=android
 KeyPassword=android
+bBuildForArm64=True
+bBuildForX8664=True
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 BundleIdentifier=io.sentry.unreal.sample
