Try stop docker service on Windows before setup

--- a/.github/workflows/ue-docker-windows.yml
+++ b/.github/workflows/ue-docker-windows.yml
@@ -82,6 +82,7 @@ jobs:
 
       - name: Configure unreal-docker
         run: |
+          Stop-Service -Name docker -Force
           ue4-docker setup
 
       - name: Build Unreal Engine Docker image
