--- a/.github/workflows/ue-docker-linux.yml
+++ b/.github/workflows/ue-docker-linux.yml
@@ -98,7 +98,8 @@ jobs:
           --target minimal \
           --exclude debug \
           --exclude templates \
-          --exclude ddc
+          --exclude ddc \
+          --opt buildgraph_args="-set:WithClient=false -set:WithServer=false"
 
       - name: Log in to GitHub package registry
         uses: docker/login-action@f4ef78c080cd8ba55a85445d5b36e214a81df20a
