--- a/.github/workflows/test-linux.yml
+++ b/.github/workflows/test-linux.yml
@@ -83,6 +83,7 @@ jobs:
         run: |
           uid=$(id -u) # the GH action user ID
           docker exec --user root unreal bash -c "
+            chown -R $uid /home/ue4/.config/Epic/UnrealEngine/XmlConfigCache-+home+ue4+UnrealEngine.bin ;
             chown -R $uid /home/ue4/UnrealEngine/Engine/Binaries/ThirdParty/Mono/Linux ;
             chown -R $uid /home/ue4/UnrealEngine/Engine/\"$ENGINE_PATH\" ;
             chown -R $uid /home/ue4/UnrealEngine/Engine/Binaries/ThirdParty/USD/UsdResources/Linux ;
